# vernachain

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  config.yaml  docker-compose.yml  docker-entrypoint.sh  requirements.txt  start.bat  start.py  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  README.md  _config.yml  api-reference.md  architecture.md  cli-tool.md  cross-shard.md  development.md  getting-started.md  index.md  installation.md  node-operation.md  project-structure.md  security.md  sharding.md  smart-contracts.md  testing.md  validator-guide.md
docs/sdk/: index.md
src/: __init__.py  main.py
src/api/: README.md  __init__.py  api_service.py  database.py  models.py  service.py
src/auth/: __init__.py  models.py  service.py  utils.py
src/blockchain/: __init__.py  block.py  blockchain.py  consensus.py  sharding.py  transaction.py  transaction_pool.py
src/bridge/: bridge_manager.py
src/cli/: __init__.py  __main__.py  commands.py
src/consensus/: validator_manager.py
src/explorer/: backend.py
src/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/networking/: __init__.py  bootstrap_node.py  manager.py  node.py  protocol.py
src/sdk/v2/rust/: Cargo.toml  README.md
src/sdk/v2/rust/src/: client.rs  error.rs  lib.rs  types.rs
tests/: __init__.py  test_blockchain.py  test_bridge_manager.py  test_crypto.py  test_networking.py  test_utils.py  test_validator_manager.py
(+137 files in other folders)
