[package]
name = "vernachain-sdk"
version = "2.0.0"
edition = "2025"
authors = ["BronzonTech-Cloud <bronzontech@pm.me>"]
description = "Official Rust SDK for Vernachain blockchain platform"
license = "MIT"
repository = "https://github.com/vernachain/sdk-rust"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.12.1"
wiremock = "0.5.21" 